# deepcatch-agent

./: .env.example  .gitignore  README.md  REQUIREMENTS.md  package-lock.json  simple-ws-test.js  test-call-flow.js  test-websocket.js  websocket-demo.html  websocket-test.html
.github/instructions/: instruction.instructions.md
front-end/: README.md  package-lock.json  package.json  tailwind.config.ts
server/: .gitignore  README.md  generate_ssl.py  pyproject.toml  run_https.py  test_realtime.py  visualize_graphs.py
server/app/: call.py  crud.py  database.py  main.py  schemas.py  twilio_client.py
server/app/tests/: test_api.py
server/data/: fishing.db
server/data/scenarios/: scenario1.json  scenario2.json  scenario3.json
server/docs/: websocket_call_flow.md
server/src/: config.py  crud.py  database.py  extract.py  fishery_api.py  main.py  media_bridge.py  models.py  openai_realtime.py  phone_validator.py  realtime_server.py  schemas.py  ssl_generator.py  test.py  twilio_t.py
server/src/agent/: README.md  __init__.py  agent_requirements.md  call_runtime.py  call_test_flow.py  conversation_models.py  conversation_tools.py  graph.py  nodes.py  openai_client.py  planner.py  scenario_loader.py  services.py  tool_results.py  types.py
server/src/agent/call_graph/: __init__.py  graph.py  models.py
server/src/agent/toolkit/: __init__.py  base.py  registry.py
server/src/agent/toolkit/builtins/: __init__.py  call.py  fish.py  fishery_catch.py  map_route.py  planner.py  weather.py
server/src/data/: businesses.csv
server/src/tests/: test_api.py
(+36 files in other folders)
